WIP: Fixed global css rule that caused overlapping icons on Storage/Volumes page.

--- a/src/assets/styles/themes/ix-blue.scss
+++ b/src/assets/styles/themes/ix-blue.scss
@@ -333,9 +333,9 @@ div.hopscotch-bubble .hopscotch-nav-button.next,
 
 // Treelists in storage/volumes
 .global_volume_based_action_menu{
-  position:absolute;
-  top:16px;
-  right:16px;
+  //position:absolute;
+  //top:16px;
+  //right:16px;
 }
 .mat-expansion-panel-header{
   background-color:rgba(0,0,0,0.1);
